Update build process

--- a/polyaxon/api/Dockerfile.master
+++ b/polyaxon/api/Dockerfile.master
@@ -19,4 +19,6 @@ RUN cp /polyaxon/web/nginx.conf /etc/nginx/sites-available/polyaxon.config
 RUN ln -s /etc/nginx/sites-available/polyaxon.config /etc/nginx/sites-enabled/polyaxon.conf
 RUN cp /polyaxon/web/uwsgi_params /etc/nginx/uwsgi_params
 
-ENTRYPOINT ["/bin/bash", "./web/start.sh"]
+WORKDIR /polyaxon/polyaxon
+
+ENTRYPOINT ["/bin/bash", "./entrypoint.sh"]
