Update api entrypoint

--- a/polyaxon/api/Dockerfile.master
+++ b/polyaxon/api/Dockerfile.master
@@ -19,6 +19,4 @@ RUN cp /polyaxon/web/nginx.conf /etc/nginx/sites-available/polyaxon.config
 RUN ln -s /etc/nginx/sites-available/polyaxon.config /etc/nginx/sites-enabled/polyaxon.conf
 RUN cp /polyaxon/web/uwsgi_params /etc/nginx/uwsgi_params
 
-WORKDIR /polyaxon/polyaxon
-
-ENTRYPOINT ["/bin/bash", "./entrypoint.sh"]
+ENTRYPOINT ["/bin/bash", "./polyaxon/entrypoint.sh"]
