Update services build process

--- a/polyaxon/core/Dockerfile.master
+++ b/polyaxon/core/Dockerfile.master
@@ -1,11 +1,6 @@
-FROM polyaxon/polyaxon-base
+FROM polyaxon/polyaxon-service
 
 MAINTAINER mourad mourafiq <mouradmourafiq@gmail.com>
-
-ENV _POLYAXON_CLI_DNS 'WVVoU01HTklUVFpNZVRnMFRWUmpORTFxUlhkWmFsazBUa1JWTUU5SFJURlphbXN5V1dwbmVFMTZSbTFaVkZrd1RsZE5OVnBVYjNwWk1rbDNXa2RKTVU5VVdUVk9SRlV3VG1wT2ExbFVWWHBOYlZWNlRtMVNhVnBVVVRST2FrWnRUbFZDZWxwWE5UQmpibXQxWVZjNGRrMVVSVFZPZWxGNFRtYzlQUT09'
-ENV _POLYAXON_PLATFORM_DNS 'WVVoU01HTklUVFpNZVRneVdYcG9hRTVFVlRGYWJWVTBUbFJCTUU1NlRUTlBSRlp0V2tkU2ExbFVSWGxPTWtsNFRWUk9hRmw2Y0dwWmVrWnBUMWRSZUU1NlVUUmFSRWt3VFhwbk5VOUhUbTFhYWtVeFdrUkplRTVxV1RWT1ZFa3lUMVZDZWxwWE5UQmpibXQxWVZjNGRrMVVSVFZPUkdzeVQxRTlQUT09'
-ENV _POLYAXON_NOTIFICATION 'WVVoU01HTklUVFpNZVRrelpETmpkVm95T1haYU1uaHNURmRHZFZsWGVEVmtSMnhxWTNrMWFtSXlNSFpaTWpsellrZFdhbVJFT1RKUVZFVnRaRWRzYTFCV1ZrSk1WR2MxVGtScmVrMTZUWGhNVkVVOQ=='
-ENV _POLYAXON_TRACKER_KEY 'Vmxoa2RsbHNRbEZQVldSdlZESjNlazF0VG05WGEyaDBWa1JzTkZJd05YWmxibXN4V2xkR1ZtSXhiejA9'
 
 RUN apt-get -y update && \
     apt-get -y install git
