--- a/polyaxon-lib/Dockerfile.master
+++ b/polyaxon-lib/Dockerfile.master
@@ -1,6 +1,6 @@
 FROM polyaxon/polyaxon-base
 
-MAINTAINER mourad mourafiq <mouradmourafiq@gmail.com>
+MAINTAINER mourad mourafiq <mourad@polyaxon.com>
 
 RUN apt-get -y update && \
     apt-get -y install git
