--- a/polyaxon/sidecar/Dockerfile.master
+++ b/polyaxon/sidecar/Dockerfile.master
@@ -1,12 +1,17 @@
-FROM polyaxon/polyaxon-core
+FROM polyaxon/polyaxon-service
 
 MAINTAINER mourad mourafiq <mourad@polyaxon.com>
+
+RUN apt-get -y update && \
+    apt-get -y install git
 
 ENV POLYAXON_SERVICE=sidecar
 
 WORKDIR /polyaxon
 COPY . /polyaxon
 
-RUN pip3 install --no-cache-dir -r /requirements/sidecar/requirements-dev.txt
+RUN pip3 install --no-cache-dir -r /polyaxon/polyaxon/sidecar/requirements/requirements-dev.txt
 
-ENTRYPOINT ["python3", "polyaxon/manage.py", "start_sidecar"]
+WORKDIR /polyaxon/polyaxon/sidecar
+
+ENTRYPOINT ["python3", "sidecar/__main__.py"]
